--- a/index.html
+++ b/index.html
@@ -131,11 +131,12 @@ a {
 
       <!-- Links section 1. Replace the # inside of the "" with your links. -->
       <div class="links-container">
-        <a href="honfoglalo/index.html" class="w3-button w3-round w3-theme-d3 w3-border link" target="_blank">Mérkőzéseim</a>
+        <a href="honfoglalo/index.html" class="w3-button w3-round w3-theme-d3 w3-border link" target="_blank">Honfoglaló</a>
         <br>
-        <a href="zengohegy/index.html" class="w3-button w3-round w3-theme-d3 w3-border link" target="_blank">A saját edzés tervem</a>
+        <a href="zengohegy/index.html" class="w3-button w3-round w3-theme-d3 w3-border link" target="_blank">A Zengő hegy</a>
         <br>
-        <a href="#" class="w3-button w3-round w3-theme-d3 w3-border link" target="_blank">A blogom</a><br>
+        <a href="balatongyorok/index.html" class="w3-button w3-round w3-theme-d3 w3-border link" target="_blank">Balatongyörök</a><br>
+        <a href="trolibusz/index.html" class="w3-button w3-round w3-theme-d3 w3-border link" target="_blank">Troli</a><br>
         <br>
 
         <div class="icons w3-padding">
