--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ a {
         <br>
         <a href="zengohegy/index.html" class="w3-button w3-round w3-theme-d3 w3-border link" target="_blank">A Zengő hegy</a>
         <br>
-        <a href="balatongyorok/index.html" class="w3-button w3-round w3-theme-d3 w3-border link" target="_blank">Balatongyörök</a><br>
+        <a href="balatongyorok/balatongyorok.html" class="w3-button w3-round w3-theme-d3 w3-border link" target="_blank">Balatongyörök</a><br>
         <a href="trolibusz/index.html" class="w3-button w3-round w3-theme-d3 w3-border link" target="_blank">Troli</a><br>
         <br>
 
