--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ a {
         <br>
         <a href="balatongyorok/balatongyorok.html" class="w3-button w3-round w3-theme-d3 w3-border link" target="_blank">Balatongyörök</a><br>
         <a href="troli/index.html" class="w3-button w3-round w3-theme-d3 w3-border link" target="_blank">Troli</a><br>
-        <a href="magyarkutyafajtak/index.html" class="w3-button w3-round w3-theme-d3 w3-border link" target="_blank">Kutya</a><br>
+        <a href="magyarkutyafajtak/magyarkutyak.html" class="w3-button w3-round w3-theme-d3 w3-border link" target="_blank">Kutya</a><br>
         <br>
 
         <div class="icons w3-padding">
