--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <style>
 
 body {
-  background-image: "hatter.jpg"; /* The image used for background */
+  background-image: url("hatter.jpg");
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover; /* Resize the background image to cover the entire container */
